2001-10-19  Jeff Hobbs  <jeffh@ActiveState.com>

	************************
	****  8.3.4 TAGGED  ****
	************************

	* library/tk.tcl: added tk::GetSelection from 8.4 for console.

	* library/console.tcl: fixed a few errors where namespace command
	names were used that were not back-ported from 8.4.

2001-10-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure: regend
	* unix/tcl.m4 (SC_ENABLE_GCC): enabled better recognition of gcc.

	* tests/defs.tcl: removed threaded build warning under X.

	* library/console.tcl (tkConsoleOutput): fixed undefined widget
	argument.

2001-10-17 Daniel Steffen <das@users.sourceforge.net>

	* mac/tkMacProjects.sea.hqx: updated projects with new version
	numbers and resource reorganization; included XML versions of
	the projects for CW Pro5 or Pro7 users.
	
2001-10-17 Daniel Steffen <das@users.sourceforge.net>

	Backport of mac specific changes added to 8.4 since 8.3.3:
	
	* generic/tkConsole.c: crashing bug fix when printing to console
	at program exit after the console has already been closed.
	Now setting gStdoutInterp=NULL in ConsoleClose().

	* mac/tkMacInit.c: correct use of Tcl_JoinPath in tk_library
	initialization

	* mac/tkMacMenu.c: special MDEF_PROC_OFFSET only needed for
	exactly one specifc version of the MWERKS 68k compiler .

	* mac/tkMacApplication.r:
	* mac/tkMacLibrary.r:
	* mac/tkMacResource.r: updated copyrights/dates in version
	strings; reorganized resources among these files to avoid 
	multiple copies in applications and shared libraries, the script
	libraries/Xcursors etc are now no longer duplicated in Wish but
	are only included in the resources of Tk.shlb.

2001-10-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tkUnixXId.c (TkpScanWindowId): added specific char* cast to
	prevent warning.  'string' is not modified in any case.

	* unix/configure: regened
	* unix/configure.in: added preset CFLAGS check from HEAD to
	prevent --enable-gcc from adding "-g -O2"
