@@ -1,8 +1,16 @@
-2001-10-19  Jeff Hobbs  <jeffh@ActiveState.com>
+2001-10-19  Daniel Steffen <das@users.sourceforge.net>
 
 	************************
 	****  8.3.4 TAGGED  ****
 	************************
+
+	* generic/tkConsole.c:
+	* library/console.tcl:
+	* mac/tkMacInit.c:
+	* mac/tkMacResource.r: corrected how mac deals with tcl library
+	files present both in resources and in $tk_library directory.
+	
+2001-10-19  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* library/tk.tcl: added tk::GetSelection from 8.4 for console.
 
@@ -37,7 +45,7 @@
 	initialization
 
 	* mac/tkMacMenu.c: special MDEF_PROC_OFFSET only needed for
-	exactly one specifc version of the MWERKS 68k compiler .
+	exactly one specific version of the MWERKS 68k compiler .
 
 	* mac/tkMacApplication.r:
 	* mac/tkMacLibrary.r:
